Update hero buttons to prevent container overflow
Removed width specifier since it caused the hero buttons to overflow their parent container on Mobile

--- a/bikespace_frontend/src/components/landing/content-blocks/content-blocks.module.scss
+++ b/bikespace_frontend/src/components/landing/content-blocks/content-blocks.module.scss
@@ -58,7 +58,6 @@ a.buttonLink {
   &:hover {
     border-color: $color-primary;
   }
-  width: 125%;
   gap: 1rem;
 }
 
@@ -77,7 +76,6 @@ a.buttonFilled {
     color: white;
   }
   padding: 1.5rem;
-  width: 125%;
   gap: 1rem;
 }
 
